# pymesh

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  mkdocs_backup.yml  objects.inv  pyproject.toml  sitemap.xml  tempCodeRunnerFile.py  utils.py
SUMMARY/: index.html
dev/: index.html
doc-pages/: index.html
docs/: SUMMARY.md  about.md  arc3p.md  auto_docstring.py  coons_patch.md  curve.md  documentation.md  gen_pages.py  gen_pages_from_package_directory.py  gen_pages_from_package_initializer.py  how-to-guides.md  index.md  line.md  mesh_distributions.md  other.md  page2.md  point.md  references.md  surface.md
examples/: !playground.py  arc3p.py  arcpva.py  arcva.py  bilinear_surface.py  circle.py  circle_quarter.py  cylinder.py  linearly_swept_surface.py  plane_surface.py  plotting.py  rectangle.py  rectanle.py  ruled_surface.py  simple-example.py  simple-symmetry-example.py  swept_surface.py  vertical-cylinder.py  vertical_cylinder.py  write_to_gdf.py
gdf/: __init__.py  constants.py  descriptors.py  exceptions.py  gdf_viewer.py  gdf_writer.py  mesh_distributions.py  points.py  utils.py  vector3d.py
gdfgen/: __init__.py  constants.py  exceptions.py  gdf_viewer.py  gdf_writer.py  mesh.py  point.py  vector3d.py
gdfpy/: __init__.py  constants.py  gdf_viewer.py  gdf_writer.py  vector3d.py
mesh_generator/: __init__.py  constants.py  curves.py  mesh.py  mesh_alt.py  mesh_alt2.py  point.py  points.py  surfaces.py
output/: cylinder.gdf  rectangle.gdf  simple-example.gdf  simple-symmetry-example.gdf
pygdf/: __init__.py  constants.py  custom_types.py  descriptors.py  gdf_viewer.py  gdf_writer.py  mesh_distributions.py  utils.py
pymesh/: __init__.py  (+11 more)
(+230 files in other folders)
