[tool.poetry]
package-mode = false
description = "Simple GDF mesh panel generator for input to programs such as WAMIT."
authors = ["Thomas Viuff <tviuff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
