[tool.poetry]
name = "pymesh"
version = "1.1.0"
description = "Geometry package for generating geometric data files for import and use in WAMIT"
authors = ["Thomas Viuff <tviuff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pymesh"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pre-commit = "^3.6.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
